# job_finder

./: .env.example  .gitignore  AGENTS.md  README.md  build.sh  poller.py  pyproject.toml  requirements.txt  runtime.txt
src/: __init__.py  bot.py  job_search.py  main.py  poller.py  server.py
src/agents/: __init__.py  job_filter.py  job_search.py  notifier.py  query_parser.py  ranker.py  resume_matcher.py
src/config/: __init__.py  settings.py
src/schemas/: models.py
src/services/: memory.py  storage.py  telegram.py
src/tools/: file_tools.py  huggingface.py  scraper.py
src/tools/scrapers/: __init__.py  base.py  dispatcher.py  google_jobs.py  http_scraper.py  indeed.py  linkedin.py  naukri.py  simple_scraper.py
src/utils/: __init__.py  time_utils.py
