[project]
name = "job-finder"
version = "1.0.0"
description = "AI Job Finder - Multi-source job scraper with Telegram bot"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.25.0",
    "python-telegram-bot>=21.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.45.0",
    "apscheduler>=3.10.0",
    "groq>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.render]
runtime = "python3.12"